@@ -398,6 +398,8 @@ Release 0.22.0 - Unreleased
 
     HDFS-1523. TestLargeBlock is failing on trunk. (cos)
 
+    HDFS-1502. TestBlockRecovery triggers NPE in assert. (hairong via cos)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
